fix: fix text alignment contest name in contest table

--- a/src/public/assets/css/global.css
+++ b/src/public/assets/css/global.css
@@ -171,3 +171,7 @@ p {
 .cell--solved {
   background-color: #00ff005f;
 }
+
+#contest-list td:nth-child(2) {
+  text-align: left;
+}
